Recent commits prevent compiling Blender 2.8, February 19 #61457

Closed
opened 2019-02-12 13:10:20 +01:00 by Nicolas Antille · 8 comments

System Information
Operating system: MacOSX
Graphics card: -

Blender Version
Broken: 2.80, commit 65ffc414fe
Worked: 2.80 compiled fine last time I tried (beginning of February 2019)

Short description of error
At the end of compilation, two errors appear: one about undeclared malloc and the other about call to function 'free' that is not visible in template def

Error 1:
[ 95%] Building CXX object source/blender/freestyle/CMakeFiles/bf_freestyle.dir/intern/python/UnaryFunction1D/UnaryFunction1D_Vec2f/BPy_Normal2DF1D.cpp.o
In file included from /Users/std/workspace/repositories/blender_28/blender_master/intern/cycles/blender/blender_device.cpp:17:
In file included from /Users/std/workspace/repositories/blender_28/blender_master/intern/cycles/blender/blender_device.h:23:

      /Users/std/workspace/repositories/blender_28/build_darwin/source/blender/makesrna/intern/RNA_blender_cpp.h:216:81: error: use of undeclared identifier 'malloc'
      DynamicArray(int new_length) : data(NULL), length(new_length) { data = (T *)malloc(sizeof(T) * new_length); }

Error 2:
In file included from /Users/std/workspace/repositories/blender_28/blender_master/intern/cycles/blender/blender_device.cpp:17:
In file included from /Users/std/workspace/repositories/blender_28/blender_master/intern/cycles/blender/blender_device.h:23:

      /Users/antyler/workspace/repositories/blender_28/build_darwin/source/blender/makesrna/intern/RNA_blender_cpp.h:226:19: error: call to function 'free' that is neither visible in the template definition nor found by argument-dependent lookup
      if (data) free(data);
                ^
      /Users/std/workspace/repositories/blender_28/build_darwin/source/blender/makesrna/intern/RNA_blender_cpp.h:217:50: note: in instantiation of member function 'BL::DynamicArray<int>::copy_from' requested here
      DynamicArray(const DynamicArray<T>& other) { copy_from(other); }
                                               ^
      /Users/std/workspace/repositories/blender_28/build_darwin/source/blender/makesrna/intern/RNA_blender_cpp.h:38795:2: note: in instantiation of member function 'BL::DynamicArray<int>::DynamicArray' requested here
      INT_DYNAMIC_ARRAY_PROPERTY(ImagePreview, image_pixels)
      ^
      /Users/std/workspace/repositories/blender_28/build_darwin/source/blender/makesrna/intern/RNA_blender_cpp.h:53:16: note: expanded from macro 'INT_DYNAMIC_ARRAY_PROPERTY'
      return ar; } \
             ^
      /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.12.sdk/usr/include/stdlib.h:143:7: note: 'free' should be declared prior to the call site
      void     free(void *);

Exact steps for others to reproduce the error
git clone http://git.blender.org/blender.git master
make update
make

**System Information** Operating system: MacOSX Graphics card: - **Blender Version** Broken: 2.80, commit 65ffc414fe2f6700c586b954331aa96ddba0eedb Worked: 2.80 compiled fine last time I tried (beginning of February 2019) **Short description of error** At the end of compilation, two errors appear: one about undeclared malloc and the other about call to function 'free' that is not visible in template def Error 1: [ 95%] Building CXX object source/blender/freestyle/CMakeFiles/bf_freestyle.dir/intern/python/UnaryFunction1D/UnaryFunction1D_Vec2f/BPy_Normal2DF1D.cpp.o In file included from /Users/std/workspace/repositories/blender_28/blender_master/intern/cycles/blender/blender_device.cpp:17: In file included from /Users/std/workspace/repositories/blender_28/blender_master/intern/cycles/blender/blender_device.h:23: ``` /Users/std/workspace/repositories/blender_28/build_darwin/source/blender/makesrna/intern/RNA_blender_cpp.h:216:81: error: use of undeclared identifier 'malloc' DynamicArray(int new_length) : data(NULL), length(new_length) { data = (T *)malloc(sizeof(T) * new_length); } ``` Error 2: In file included from /Users/std/workspace/repositories/blender_28/blender_master/intern/cycles/blender/blender_device.cpp:17: In file included from /Users/std/workspace/repositories/blender_28/blender_master/intern/cycles/blender/blender_device.h:23: ``` /Users/antyler/workspace/repositories/blender_28/build_darwin/source/blender/makesrna/intern/RNA_blender_cpp.h:226:19: error: call to function 'free' that is neither visible in the template definition nor found by argument-dependent lookup if (data) free(data); ^ /Users/std/workspace/repositories/blender_28/build_darwin/source/blender/makesrna/intern/RNA_blender_cpp.h:217:50: note: in instantiation of member function 'BL::DynamicArray<int>::copy_from' requested here DynamicArray(const DynamicArray<T>& other) { copy_from(other); } ^ /Users/std/workspace/repositories/blender_28/build_darwin/source/blender/makesrna/intern/RNA_blender_cpp.h:38795:2: note: in instantiation of member function 'BL::DynamicArray<int>::DynamicArray' requested here INT_DYNAMIC_ARRAY_PROPERTY(ImagePreview, image_pixels) ^ /Users/std/workspace/repositories/blender_28/build_darwin/source/blender/makesrna/intern/RNA_blender_cpp.h:53:16: note: expanded from macro 'INT_DYNAMIC_ARRAY_PROPERTY' return ar; } \ ^ /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.12.sdk/usr/include/stdlib.h:143:7: note: 'free' should be declared prior to the call site void free(void *); ``` **Exact steps for others to reproduce the error** git clone http://git.blender.org/blender.git master make update make

Added subscriber: @nantille

Added subscriber: @nantille
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Jacques Lucke self-assigned this 2019-02-12 15:53:18 +01:00
Member

afaik, compiling issues are not handled in the bug tracker. Please open a thread on https://devtalk.blender.org or see if there is someone on IRC who can help you.

afaik, compiling issues are not handled in the bug tracker. Please open a thread on https://devtalk.blender.org or see if there is someone on IRC who can help you.

This issue was referenced by blender/cycles@39acdd14da

This issue was referenced by blender/cycles@39acdd14dae3c689c60843c3b46f880625f25fd3

This issue was referenced by 3866161da8

This issue was referenced by 3866161da855d2b35ac48ef55958bcb567d4a740

Thanks for the link, I didn't know about devtalk. The issue is solved with the latest commits.

Thanks for the link, I didn't know about devtalk. The issue is solved with the latest commits.

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61457
No description provided.